--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "mocha": "^3.2.0",
     "react-scripts": "^1.0.7",
     "react-test-renderer": "^15.5.4",
-    "webpack": "^2.2.0",
     "webpack-dev-server": "^1.16.2"
   },
   "dependencies": {
@@ -20,6 +19,7 @@
     "chai": "^3.5.0",
     "enzyme": "^2.7.0",
     "expect": "^1.20.2",
+    "prop-types": "^15.6.1",
     "react": "^15.5.4",
     "react-addons-test-utils": "^15.4.2",
     "react-dom": "^15.5.4",
@@ -29,8 +29,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "mocha -w test/helpers.js test/*.js",
-    "dev:hot":
-      "webpack-dev-server --hot --inline --progress --colors --watch --display-error-details --display-cached --content-base ./",
+    "dev:hot": "webpack-dev-server --hot --inline --progress --colors --watch --display-error-details --display-cached --content-base ./",
     "test:watch": "npm run test -- --watch",
     "eject": "react-scripts eject"
   }
