--- a/package.json
+++ b/package.json
@@ -13,10 +13,9 @@
   "devDependencies": {
     "jsdom": "^9.9.1",
     "mocha": "^5.2.0",
-    "react-scripts": "^1.1.4",
+    "react-scripts": "^2.1.3",
     "react-test-renderer": "^15.5.4",
-    "webpack": "^3.9.0",
-    "webpack-dev-server": "^2.9.0"
+    "webpack-dev-server": "^3.1.14"
   },
   "dependencies": {
     "babel-core": "^6.26.3",
@@ -37,9 +36,14 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "mocha -w test/helpers.js test/*.js",
-    "dev:hot":
-      "webpack-dev-server --hot --inline --progress --colors --watch --display-error-details --display-cached --content-base ./",
+    "dev:hot": "webpack-dev-server --hot --inline --progress --colors --watch --display-error-details --display-cached --content-base ./",
     "test:watch": "npm run test -- --watch",
     "eject": "react-scripts eject"
-  }
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
