--- a/package.json
+++ b/package.json
@@ -13,32 +13,31 @@
   "devDependencies": {
     "jsdom": "^9.9.1",
     "mocha": "^5.2.0",
-    "react-scripts": "^1.1.4",
+    "react-scripts": "^1.1.5",
     "react-test-renderer": "^15.5.4",
     "webpack": "^3.9.0",
-    "webpack-dev-server": "^2.9.0"
+    "webpack-dev-server": "^2.11.3"
   },
   "dependencies": {
     "babel-core": "^6.26.3",
-    "babel-preset-airbnb": "^2.5.3",
+    "babel-preset-airbnb": "^2.6.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
-    "chai": "^4.1.2",
-    "enzyme": "^3.3.0",
-    "enzyme-adapter-react-16": "^1.1.1",
+    "chai": "^4.2.0",
+    "enzyme": "^3.9.0",
+    "enzyme-adapter-react-16": "^1.10.0",
     "mocha-multi": "^1.0.1",
-    "react": "^16.4.1",
+    "react": "^16.8.4",
     "react-addons-test-utils": "^15.4.2",
-    "react-dom": "^16.4.1",
-    "sinon": "^6.1.4"
+    "react-dom": "^16.8.4",
+    "sinon": "^6.3.5"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "mocha -w test/helpers.js test/*.js",
-    "dev:hot":
-      "webpack-dev-server --hot --inline --progress --colors --watch --display-error-details --display-cached --content-base ./",
+    "dev:hot": "webpack-dev-server --hot --inline --progress --colors --watch --display-error-details --display-cached --content-base ./",
     "test:watch": "npm run test -- --watch",
     "eject": "react-scripts eject"
   }
