--- a/package.json
+++ b/package.json
@@ -1,41 +1,47 @@
 {
-  "name": "react-updating-state-lab",
+  "name": "react-events-in-detail-lab",
   "version": "0.1.0",
   "private": true,
-  "babel": {
-    "presets": [
-      "airbnb",
-      "env",
-      "stage-1",
-      "react"
-    ]
-  },
   "devDependencies": {
     "jsdom": "^9.9.1",
-    "mocha": "^3.2.0",
-    "react-scripts": "^1.0.7",
+    "mocha": "^8.1.1",
+    "react-scripts": "^3.4.3",
     "react-test-renderer": "^16.0.0"
   },
   "dependencies": {
     "babel-core": "^6.22.1",
-    "babel-loader": "^7.1.2",
     "babel-preset-airbnb": "^2.1.1",
-    "babel-preset-env": "^1.6.0",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.22.0",
     "babel-preset-stage-1": "^6.24.1",
-    "chai": "^3.5.0",
-    "enzyme": "^3.1.0",
+    "babel-preset-stage-2": "^6.24.1",
+    "chai": "^4.1.2",
+    "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.0.1",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
-    "sinon": "^1.17.7"
+    "expect": "^26.4.1",
+    "mocha-multi": "^1.0.1",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
+    "sinon": "^9.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "mocha --timeout 5000 -w test/helpers.js test/*.js",
+    "test": "mocha -w test/helpers.js test/*.js",
     "dev:hot": "webpack-dev-server --hot --inline --progress --colors --watch --display-error-details --display-cached --content-base ./",
     "test:watch": "npm run test -- --watch",
     "eject": "react-scripts eject"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
