--- a/package.json
+++ b/package.json
@@ -1,28 +1,35 @@
 {
-  "name": "react-events-in-detail-lab",
+  "name": "react-updating-state-lab",
   "version": "0.1.0",
   "private": true,
+  "babel": {
+    "presets": [
+      "airbnb",
+      "env",
+      "stage-1",
+      "react"
+    ]
+  },
   "devDependencies": {
     "jsdom": "^9.9.1",
-    "mocha": "^8.1.1",
-    "react-scripts": "^3.4.3",
+    "mocha": "^3.2.0",
+    "react-scripts": "^1.0.7",
     "react-test-renderer": "^16.0.0"
   },
   "dependencies": {
     "babel-core": "^6.22.1",
+    "babel-loader": "^7.1.2",
     "babel-preset-airbnb": "^2.1.1",
-    "babel-preset-env": "^1.7.0",
+    "babel-preset-env": "^1.6.0",
     "babel-preset-react": "^6.22.0",
     "babel-preset-stage-1": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1",
-    "chai": "^4.1.2",
-    "enzyme": "^3.3.0",
+    "chai": "^3.5.0",
+    "enzyme": "^3.1.0",
     "enzyme-adapter-react-16": "^1.0.1",
-    "expect": "^26.4.1",
-    "mocha-multi": "^1.0.1",
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0",
-    "sinon": "^9.0.3"
+    "mocha-multi": "^1.1.3",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
+    "sinon": "^1.17.7"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -31,17 +38,5 @@
     "dev:hot": "webpack-dev-server --hot --inline --progress --colors --watch --display-error-details --display-cached --content-base ./",
     "test:watch": "npm run test -- --watch",
     "eject": "react-scripts eject"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
   }
 }
